--- a/分享链接10月第一期.md
+++ b/分享链接10月第一期.md
@@ -1,1 +1,2 @@
-
+[Android开发架构规范，这个还是蛮重要的，没有规矩不成方圆！](http://www.jianshu.com/p/99239b9c1630)(之前一个项目那个做界面的人瞎命名，真的当时有想打人的冲动。。。)  
+[View进阶-事件分发原理，讲的通俗易懂深入浅出](http://www.gcssloop.com/customview/dispatch-touchevent-theory)(我感觉不仅仅是自定义View。这个事件分发，以前sv嵌套lv就遇到过。很坑。)
